--- a/concordance/DESCRIPTION
+++ b/concordance/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: concord
+Package: concordance
 Type: Package
-Title: Product concordance
-Version: 0.1
-Date: 2014-12-26
+Title: Product Concordance
+Version: 0.2
+Date: 2015-01-01
 Author: Feng Zhu
 Maintainer: Feng Zhu <zhufeng@umich.edu>
 Description: Concordance between HS 1988/92, ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes
