Added desc function, autoloading of data, etc.
Also support for disaggregated codes.
Description function still rudimentary, pending addition of more data

--- a/concordance/DESCRIPTION
+++ b/concordance/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 0.4
-Date: 2015-01-03
+Version: 0.5
+Date: 2015-02-15
 Author: Feng Zhu
 Maintainer: Feng Zhu <zhufeng@umich.edu>
 Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes
 License: GPL-2
+LazyData: true
