--- a/concordance/DESCRIPTION
+++ b/concordance/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 0.5
-Date: 2015-02-15
+Version: 0.6
+Date: 2015-03-22
 Author: Feng Zhu
 Maintainer: Feng Zhu <zhufeng@umich.edu>
-Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes
+Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes; code nomenclature / descriptions; Rauch classification look-up (via concordance to SITC2)
 License: GPL-2
 LazyData: true
