--- a/concordance/DESCRIPTION
+++ b/concordance/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 0.8
-Date: 2015-04-24
+Version: 0.9    
+Date: 2015-05-21
 Author: Feng Zhu
-Maintainer: Feng Zhu <zhufeng@umich.edu>
-Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes; code nomenclature / descriptions; Rauch classification look-up (via concordance to SITC2)
+Maintainer: In Song Kim <insong@mit.edu>, Feng Zhu <zhufeng@umich.edu>
+Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes; code nomenclature / descriptions; Rauch classification look-up (via concordance to SITC2) and trade elasticity look-up (via concordance to SITC2/3 or HS3)
 License: GPL-2
 LazyData: true
