--- a/concordance/DESCRIPTION
+++ b/concordance/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 1.5.1
-Date: 2015-09-06
-Author: Feng Zhu
+Version: 1.5.2
+Date: 2015-10-04
+Author: Feng Zhu, In Song Kim
 Maintainer: In Song Kim <insong@mit.edu>, Feng Zhu <zhufeng@umich.edu>
 Description: Concordance between HS (Combined), ISIC Rev. 2/3, and SITC1,2,3,4 product classification codes, as well as BEC, NAICS, and SIC classifications; code nomenclature / descriptions; Rauch classification look-up (via concordance to SITC2) and trade elasticity look-up (via concordance to SITC2/3 or HS3)
 License: GPL-2
