--- a/concordance/NAMESPACE
+++ b/concordance/NAMESPACE
@@ -6,12 +6,14 @@ export(concord_hs2_naics)
 export(concord_hs3_naics)
 export(concord_hs4_naics)
 export(concord_hs_naics)
+export(concord_hs_sitc4)
 export(concord_naics_hs)
 export(concord_naics_hs0)
 export(concord_naics_hs1)
 export(concord_naics_hs2)
 export(concord_naics_hs3)
 export(concord_naics_hs4)
+export(concord_sitc4_hs)
 export(concord_v2)
 export(get_desc)
 import(tidyverse)
