--- a/concordance/NAMESPACE
+++ b/concordance/NAMESPACE
@@ -8,6 +8,7 @@ export(concord_sitc)
 export(concord_sitc_naics)
 export(get_desc)
 export(get_proddiff)
+export(get_sigma)
 import(dplyr)
 import(purrr)
 import(stringr)
