Added README file, edited citations for consistency, fix URLs to pass checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 2.0
-Date: 2020-04-17
-Author: Steven Liao, In Song Kim, Sayumi Miyano, Feng Zhu
-Maintainer: Steven Liao <steven.liao@ucr.edu>
-Description: A set of utilities for matching products in different classification codes used in international trade research. It supports concordance between HS (HS0, HS1, HS2, HS3, HS4, HS5, Combined), SITC1,2,3,4 product classification codes, NAICS (Combined), as well as BEC, ISIC, and SIC classifications. It also provides code nomenclature / descriptions look-up, Rauch classification look-up (via concordance to SITC2) and trade elasticity look-up (via concordance to SITC2/3 or HS3.ss).
+Version: 2.0.0
+Date: 2020-04-20
+Authors@R: c(
+  person("Steven", "Liao", email = "steven.liao@ucr.edu", role = c("aut", "cre")),
+  person("In Song", "Kim", email = "insong@mit.edu", role = c("aut")),
+  person("Sayumi", "Miyano", email = "smiyano@princeton.edu", role = c("aut")),
+  person("Feng", "Zhu", email = "zucxjo@gmail.com", role = c("aut"))
+  )
+Description: A set of utilities for matching products in different classification codes used in international trade research. It supports concordance between HS (HS0, HS1, HS2, HS3, HS4, HS5, Combined), SITC1, 2, 3, 4 product classification codes, NAICS (Combined), as well as BEC, ISIC, and SIC classifications. It also provides code nomenclature / descriptions look-up, Rauch classification look-up (via concordance to SITC2) and trade elasticity look-up (via concordance to HS0 or SITC3 codes).
 License: GPL-2
 Depends: R (>= 3.6.0)
 Imports: 
