New function (find_product) & BEC description updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(concord_hs_naics)
 export(concord_hs_sitc)
 export(concord_sitc)
 export(concord_sitc_naics)
+export(find_product)
 export(get_desc)
 export(get_proddiff)
 export(get_sigma)
