--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,10 @@ export(concord_hs_naics)
 export(concord_hs_sitc)
 export(concord_sitc)
 export(concord_sitc_naics)
-export(find_product)
 export(get_desc)
+export(get_intermediate)
 export(get_proddiff)
+export(get_product)
 export(get_sigma)
 import(dplyr)
 import(purrr)
