Added new functions for NAICS concordance
Now supports:

1. Concordance within NAICS classification (2002, 2007, 2012, 2017)
2. Concordance between various versions of NAICS (2002, 2007, 2012, 2017, combined) and HS (HS0, HS1, HS2, HS3, HS4, HS5, combined).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(concord)
 export(concord_hs)
 export(concord_hs_naics)
 export(concord_hs_sitc)
+export(concord_naics)
 export(concord_sitc)
 export(concord_sitc_naics)
 export(get_desc)
