--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(concord)
 export(concord_hs)
+export(concord_hs_isic)
 export(concord_hs_naics)
 export(concord_hs_sitc)
+export(concord_isic)
 export(concord_naics)
 export(concord_sitc)
 export(concord_sitc_naics)
