--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: concordance
 Type: Package
 Title: Product Concordance
-Version: 2.0.0
+Version: 2.1.0
 Date: 2020-04-23
 Authors@R: c(
   person("Steven", "Liao", email = "steven.liao@ucr.edu", role = c("aut", "cre")),
@@ -14,13 +14,13 @@ Description: A set of utilities for matching products in different
 	     research. It supports concordance between the Harmonized
 	     System (HS0, HS1, HS2, HS3, HS4, HS5, HS combined), the Standard 
 	     International Trade Classification (SITC1, SITC2, SITC3, SITC4), 
-	     the North American Industry Classification System (NAICS combined),
-	     as well as the Broad Economic Categories (BEC), the International 
-	     Standard of Industrial Classification (ISIC), and the Standard Industrial 
-	     Classification (SIC). It also provides code nomenclature/descriptions 
-	     look-up, Rauch classification look-up (via concordance to SITC2), and
-	     trade elasticity look-up (via concordance to HS0 or SITC3
-	     codes).
+	     the North American Industry Classification System (NAICS 2002, 2007, 
+	     2012, 2017, combined), as well as the Broad Economic Categories (BEC), 
+	     the International Standard of Industrial Classification (ISIC2, ISIC3, 
+	     ISIC3.1, ISIC4), and the Standard Industrial Classification (SIC). It 
+	     also provides code nomenclature/descriptions look-up, Rauch 
+	     classification look-up (via concordance to SITC2), and trade elasticity 
+	     look-up (via concordance to HS0 or SITC3 codes).
 License: GPL-2
 Depends: R (>= 3.6.0)
 Imports: 
