--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(concord_hs_naics)
 export(concord_hs_sitc)
 export(concord_isic)
 export(concord_naics)
+export(concord_naics_isic)
 export(concord_sitc)
+export(concord_sitc_isic)
 export(concord_sitc_naics)
 export(get_desc)
 export(get_intermediate)
