--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_intermediate)
 export(get_proddiff)
 export(get_product)
 export(get_sigma)
+export(get_upstream)
 import(dplyr)
 import(purrr)
 import(stringr)
