--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: concordance
 Type: Package
 Title: Product Concordance
 Version: 2.1.0
-Date: 2020-04-23
+Date: 2020-07-03
 Authors@R: c(
   person("Steven", "Liao", email = "steven.liao@ucr.edu", role = c("aut", "cre")),
   person("In Song", "Kim", email = "insong@mit.edu", role = c("aut")),
   person("Sayumi", "Miyano", email = "smiyano@princeton.edu", role = c("aut")),
-  person("Feng", "Zhu", email = "zucxjo@gmail.com", role = c("aut"))
+  person("Hao", "Zhang", email = "hzhang3@mit.edu", role = c("aut"))
   )
 Description: A set of utilities for matching products in different
 	     classification codes used in international trade
