Many-to-many mapping
Accounting many-to-many mapping and taking the simple average of the GVC_Ui estimates.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_proddiff)
 export(get_product)
 export(get_sigma)
 export(get_upstream)
+export(get_upstream_test)
 import(dplyr)
 import(purrr)
 import(stringr)
