finish sitc-bec concordance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(concord_isic)
 export(concord_naics)
 export(concord_naics_isic)
 export(concord_sitc)
+export(concord_sitc_bec)
 export(concord_sitc_isic)
 export(concord_sitc_naics)
 export(get_desc)
