--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(concord_hs_naics)
 export(concord_hs_sitc)
 export(concord_isic)
 export(concord_naics)
+export(concord_naics_bec)
 export(concord_naics_isic)
 export(concord_sitc)
 export(concord_sitc_bec)
