Finish concord_isic_bec and concord

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(concord_hs_isic)
 export(concord_hs_naics)
 export(concord_hs_sitc)
 export(concord_isic)
+export(concord_isic_bec)
 export(concord_naics)
 export(concord_naics_bec)
 export(concord_naics_isic)
