created uspc-naics concord created get_lifecycle updated data and concord files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,10 @@ export(concord_sitc)
 export(concord_sitc_bec)
 export(concord_sitc_isic)
 export(concord_sitc_naics)
+export(concord_uspc_naics)
 export(get_desc)
 export(get_intermediate)
+export(get_lifecycle)
 export(get_proddiff)
 export(get_product)
 export(get_sigma)
