--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(concord_sitc)
 export(concord_sitc_bec)
 export(concord_sitc_isic)
 export(concord_sitc_naics)
+export(concord_uspc_ipc)
 export(concord_uspc_naics)
 export(get_desc)
 export(get_intermediate)
